--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.7.2
+chardet==5.2.0
 Django==3.2.23
-django-allauth==0.59.0
+django-allauth==0.41.0
 oauthlib==3.2.2
-PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests-oauthlib==1.3.1
